# wgpu-renderer

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: renderer_test.rs
res/shaders/: textured.vert  textured.vert.wgsl
src/: camera.rs  error.rs  init.rs  lib.rs  renderer.rs  sprite.rs  types.rs
src/text/: error.rs  mod.rs  renderer.rs  types.rs
